# afk-composable-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODING_STANDARDS.md  Containerfile  README.md  pyproject.toml
docs/: pipeline-overview.md
project-contracts/: afk-composable-pipeline.json  bump-eqemu.json
scripts/: container-smoke.sh
src/afk/: __init__.py  __main__.py  bead_spec.py  bootstrap_adapter.py  bootstrap_approval.py  candidate.py  candidate_gate.py  candidate_publication.py  candidate_validation.py  checkouts.py  cli.py  codex_permissions.py  contracts.py  evidence_gate.py  implement.py  implementation_attempt.py  integration.py  jsonutil.py  pi_workers.py  publication.py  recipes.py  redaction.py  registry.py  resume_preflight.py  retrospective.py  review.py  review_cycles.py  role_adapters.py  roles.py  run_next.py  run_store.py  start.py  (+8 more)
tests/: test_candidate.py  test_candidate_gate.py  test_candidate_validation_cli.py  test_cli_noop.py  test_codex_permissions.py  test_evidence_gate.py  test_implement_cli.py  test_integration.py  test_integration_cli.py  test_pi_workers.py  test_prepare_checkout_cli.py  test_publication.py  test_recipe_cli.py  test_redaction.py  test_registry.py  test_retrospective.py  test_review_cli.py  test_role_adapters.py  test_roles.py  test_run_next_cli.py  test_run_store.py  test_schema_helpers.py  test_select_work_cli.py  test_self_hosted_validation_cli.py  test_start_cli.py  test_supervised_command.py  test_tracking.py  test_validate_cli.py  test_workstream_cli.py  test_workstream_lifecycle.py  test_workstream_status.py
(+1 files in other folders)
